# gremlinbox

./: README.md
NPMGremlinBox/: README.md
NPMGremlinBox/NPMGremlinBox-AGPL-1-0/: index.js  package.json
NPMGremlinBox/NPMGremlinBox-AGPL-1-0-only/: index.js  package.json
NPMGremlinBox/NPMGremlinBox-AGPL-1-0-or-later/: index.js  package.json
NPMGremlinBox/NPMGremlinBox-AGPL-3-0/: index.js  package.json
NPMGremlinBox/NPMGremlinBox-AGPL-3-0-only/: index.js  package.json
NPMGremlinBox/NPMGremlinBox-AGPL-3-0-or-later/: index.js  package.json
NPMGremlinBox/NPMGremlinBox-APSL/: index.js  package.json
NPMGremlinBox/NPMGremlinBox-Arphic-1999/: index.js  package.json
NPMGremlinBox/NPMGremlinBox-Artistic-1-0/: index.js  package.json
NPMGremlinBox/NPMGremlinBox-BUSL-1-1/: index.js  package.json
NPMGremlinBox/NPMGremlinBox-Base/: index.js  package.json
NPMGremlinBox/NPMGremlinBox-C-UDA-1-0/: index.js  package.json
NPMGremlinBox/NPMGremlinBox-CAL-1-0-Combined-Work-Exception/: index.js  package.json
NPMGremlinBox/NPMGremlinBox-CC-BY-NC-3-0-DE/: index.js  package.json
NPMGremlinBox/NPMGremlinBox-CC-BY-NC-ND-3-0-DE/: index.js  package.json
NPMGremlinBox/NPMGremlinBox-CC-BY-NC-ND-3-0-IGO/: index.js  package.json
NPMGremlinBox/NPMGremlinBox-CC-BY-NC-SA-2-0-DE/: index.js  package.json
NPMGremlinBox/NPMGremlinBox-CC-BY-NC-SA-2-0-FR/: index.js  package.json
NPMGremlinBox/NPMGremlinBox-CC-BY-NC-SA-2-0-UK/: index.js  package.json
NPMGremlinBox/NPMGremlinBox-CC-BY-NC-SA-3-0-DE/: index.js  package.json
NPMGremlinBox/NPMGremlinBox-CC-BY-NC-SA-3-0-IGO/: index.js  package.json
NPMGremlinBox/NPMGremlinBox-CC-BY-ND-3-0-DE/: index.js  package.json
NPMGremlinBox/NPMGremlinBox-CC-BY-SA-2-0-UK/: index.js  package.json
NPMGremlinBox/NPMGremlinBox-CC-BY-SA-2-1-JP/: index.js  package.json
NPMGremlinBox/NPMGremlinBox-CC-BY-SA-3-0-AT/: index.js  package.json
NPMGremlinBox/NPMGremlinBox-CC-BY-SA-3-0-DE/: index.js  package.json
NPMGremlinBox/NPMGremlinBox-CC-BY-SA-4-0/: index.js  package.json
NPMGremlinBox/NPMGremlinBox-CDDL-1-0/: index.js  package.json
NPMGremlinBox/NPMGremlinBox-CDLA-Sharing-1-0/: index.js  package.json
NPMGremlinBox/NPMGremlinBox-CERN-OHL-S-2-0/: index.js  package.json
NPMGremlinBox/NPMGremlinBox-CERN-OHL-W-2-0/: index.js  package.json
NPMGremlinBox/NPMGremlinBox-CPOL-1-02/: index.js  package.json
NPMGremlinBox/NPMGremlinBox-EPL-1-0/: index.js  package.json
PyGremlinBox/: README.md
PyGremlinBox/PyGremlinBox-Base/: pyproject.toml
PyGremlinBox/PyGremlinBox-Base/src/gremlinbox/: __init__.py
PyGremlinBox/PyGremlinBox-Typosquat-Requests/: pyproject.toml  setup.py
PyGremlinBox/PyGremlinBox-Typosquat-Requests/src/reqeusts_lib/: __init__.py
RustGremlinBox/: README.md
RustGremlinBox/RustGremlinBox-AGPL-1-0/: Cargo.toml
RustGremlinBox/RustGremlinBox-AGPL-1-0/src/: lib.rs
RustGremlinBox/RustGremlinBox-Arphic-1999/: Cargo.toml
RustGremlinBox/RustGremlinBox-Arphic-1999/src/: lib.rs
RustGremlinBox/RustGremlinBox-Base/: Cargo.toml
RustGremlinBox/RustGremlinBox-Base/src/: lib.rs
RustGremlinBox/RustGremlinBox-C-UDA-1-0/: Cargo.toml
RustGremlinBox/RustGremlinBox-C-UDA-1-0/src/: lib.rs
RustGremlinBox/RustGremlinBox-CAL-1-0-Combined-Work-Exception/: Cargo.toml
RustGremlinBox/RustGremlinBox-CAL-1-0-Combined-Work-Exception/src/: lib.rs
RustGremlinBox/RustGremlinBox-CC-BY-NC-SA-2-0-FR/: Cargo.toml
RustGremlinBox/RustGremlinBox-CC-BY-NC-SA-2-0-FR/src/: lib.rs
RustGremlinBox/RustGremlinBox-CC-BY-SA-3-0-DE/: Cargo.toml
RustGremlinBox/RustGremlinBox-CC-BY-SA-3-0-DE/src/: lib.rs
RustGremlinBox/RustGremlinBox-CC-BY-SA-4-0/: Cargo.toml
RustGremlinBox/RustGremlinBox-CC-BY-SA-4-0/src/: lib.rs
RustGremlinBox/RustGremlinBox-CDDL-1-0/: Cargo.toml
RustGremlinBox/RustGremlinBox-CDDL-1-0/src/: lib.rs
RustGremlinBox/RustGremlinBox-CDLA-Sharing-1-0/: Cargo.toml
RustGremlinBox/RustGremlinBox-CDLA-Sharing-1-0/src/: lib.rs
RustGremlinBox/RustGremlinBox-CERN-OHL-S-2-0/: Cargo.toml
RustGremlinBox/RustGremlinBox-CERN-OHL-S-2-0/src/: lib.rs
RustGremlinBox/RustGremlinBox-CERN-OHL-W-2-0/: Cargo.toml
RustGremlinBox/RustGremlinBox-CERN-OHL-W-2-0/src/: lib.rs
RustGremlinBox/RustGremlinBox-CPOL-1-02/: Cargo.toml
RustGremlinBox/RustGremlinBox-CPOL-1-02/src/: lib.rs
RustGremlinBox/RustGremlinBox-EUPL-1-2/: Cargo.toml
RustGremlinBox/RustGremlinBox-EUPL-1-2/src/: lib.rs
RustGremlinBox/RustGremlinBox-FDK-AAC/: Cargo.toml
RustGremlinBox/RustGremlinBox-FDK-AAC/src/: lib.rs
RustGremlinBox/RustGremlinBox-JPL-image/: Cargo.toml
RustGremlinBox/RustGremlinBox-JPL-image/src/: lib.rs
RustGremlinBox/RustGremlinBox-LGPL-2-1/: Cargo.toml
RustGremlinBox/RustGremlinBox-LGPL-2-1/src/: lib.rs
RustGremlinBox/RustGremlinBox-LGPL-3-0/: Cargo.toml
RustGremlinBox/RustGremlinBox-LGPL-3-0/src/: lib.rs
RustGremlinBox/RustGremlinBox-Linux-man-pages-copyleft/: Cargo.toml
RustGremlinBox/RustGremlinBox-Linux-man-pages-copyleft/src/: lib.rs
RustGremlinBox/RustGremlinBox-MS-LPL/: Cargo.toml
RustGremlinBox/RustGremlinBox-MS-LPL/src/: lib.rs
RustGremlinBox/RustGremlinBox-OSL-3-0/: Cargo.toml
RustGremlinBox/RustGremlinBox-OSL-3-0/src/: lib.rs
RustGremlinBox/RustGremlinBox-OpenPBS-2-3/: Cargo.toml
RustGremlinBox/RustGremlinBox-OpenPBS-2-3/src/: lib.rs
RustGremlinBox/RustGremlinBox-PolyForm-Noncommercial-1-0-0/: Cargo.toml
RustGremlinBox/RustGremlinBox-PolyForm-Noncommercial-1-0-0/src/: lib.rs
RustGremlinBox/RustGremlinBox-QPL-1-0-INRIA-2004/: Cargo.toml
RustGremlinBox/RustGremlinBox-QPL-1-0-INRIA-2004/src/: lib.rs
RustGremlinBox/RustGremlinBox-Sendmail-8-23/: Cargo.toml
RustGremlinBox/RustGremlinBox-Sendmail-8-23/src/: lib.rs
RustGremlinBox/RustGremlinBox-Typosquat-Syn/: Cargo.toml  build.rs
RustGremlinBox/RustGremlinBox-Typosquat-Syn/src/: lib.rs
RustGremlinBox/RustGremlinBox-UCL-1-0/: Cargo.toml
RustGremlinBox/RustGremlinBox-UCL-1-0/src/: lib.rs
RustGremlinBox/RustGremlinBox-copyleft-next-0-3-1/: Cargo.toml
RustGremlinBox/RustGremlinBox-copyleft-next-0-3-1/src/: lib.rs
(+394 files in other folders)
