# SPDX-License-Identifier: GPL-3.0
# SPDX-FileCopyrightText: 2025 GremlinBox Maintainer <simon@sigre.xyz>

[project]
name = "gremlinbox"
version = "2.0.1"
description = "GremlinBox: multi-language supply chain security testing package collection"
requires-python = ">=3.11"
license = {text = "GPL-3.0"}
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Topic :: Security",
]

[project.urls]
Repository = "https://github.com/gocortexio/gremlinbox"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gremlinbox"]
