[package]
name = "gremlinbox-agpl-1-0"
version = "2.0.1"
edition = "2021"
rust-version = "1.70"
description = "GNU Affero General Public Licence version 1.0"
authors = ["GremlinBox Maintainer <simon@sigre.xyz>"]
license = "AGPL-1.0"
repository = "https://github.com/gocortexio/gremlinbox"
homepage = "https://github.com/gocortexio/gremlinbox"
documentation = "https://github.com/gocortexio/gremlinbox"
keywords = ["security", "testing", "licence", "spdx", "supply-chain"]
categories = ["development-tools::testing"]
include = ["src/**/*.rs", "LICENCE", "Cargo.toml"]
