[package]
name = "gremlinbox"
version = "2.0.1"
edition = "2021"
rust-version = "1.70"
description = "GremlinBox: multi-language supply chain security testing package collection"
authors = ["GremlinBox Maintainer <simon@sigre.xyz>"]
license = "GPL-3.0"
repository = "https://github.com/gocortexio/gremlinbox"
homepage = "https://github.com/gocortexio/gremlinbox"
documentation = "https://github.com/gocortexio/gremlinbox"
keywords = ["security", "testing", "supply-chain", "spdx"]
categories = ["development-tools::testing"]
include = ["src/**/*.rs", "LICENCE", "Cargo.toml"]
