[package]
name = "gremlinbox-cc-by-sa-3-0-de"
version = "2.0.1"
edition = "2021"
rust-version = "1.70"
description = "Creative Commons Attribution-ShareAlike 3.0 Germany"
authors = ["GremlinBox Maintainer <simon@sigre.xyz>"]
license = "CC-BY-SA-3.0-DE"
repository = "https://github.com/gocortexio/gremlinbox"
homepage = "https://github.com/gocortexio/gremlinbox"
documentation = "https://github.com/gocortexio/gremlinbox"
keywords = ["security", "testing", "licence", "spdx", "supply-chain"]
categories = ["development-tools::testing"]
include = ["src/**/*.rs", "LICENCE", "Cargo.toml"]
