[package]
name = "gremlinbox-cern-ohl-s-2-0"
version = "2.0.1"
edition = "2021"
rust-version = "1.70"
description = "CERN Open Hardware Licence version 2.0 Strongly Reciprocal"
authors = ["GremlinBox Maintainer <simon@sigre.xyz>"]
license = "CERN-OHL-S-2.0"
repository = "https://github.com/gocortexio/gremlinbox"
homepage = "https://github.com/gocortexio/gremlinbox"
documentation = "https://github.com/gocortexio/gremlinbox"
keywords = ["security", "testing", "licence", "spdx", "supply-chain"]
categories = ["development-tools::testing"]
include = ["src/**/*.rs", "LICENCE", "Cargo.toml"]
