[package]
name = "gremlinbox-cpol-1-02"
version = "2.0.1"
edition = "2021"
rust-version = "1.70"
description = "Code Project Open Licence 1.02"
authors = ["GremlinBox Maintainer <simon@sigre.xyz>"]
license = "CPOL-1.02"
repository = "https://github.com/gocortexio/gremlinbox"
homepage = "https://github.com/gocortexio/gremlinbox"
documentation = "https://github.com/gocortexio/gremlinbox"
keywords = ["security", "testing", "licence", "spdx", "supply-chain"]
categories = ["development-tools::testing"]
include = ["src/**/*.rs", "LICENCE", "Cargo.toml"]
