[package]
name = "gremlinbox-eupl-1-2"
version = "2.0.1"
edition = "2021"
rust-version = "1.70"
description = "European Union Public Licence version 1.2"
authors = ["GremlinBox Maintainer <simon@sigre.xyz>"]
license = "EUPL-1.2"
repository = "https://github.com/gocortexio/gremlinbox"
homepage = "https://github.com/gocortexio/gremlinbox"
documentation = "https://github.com/gocortexio/gremlinbox"
keywords = ["security", "testing", "licence", "spdx", "supply-chain"]
categories = ["development-tools::testing"]
include = ["src/**/*.rs", "LICENCE", "Cargo.toml"]
