[package]
name = "gremlinbox-fdk-aac"
version = "2.0.1"
edition = "2021"
rust-version = "1.70"
description = "Fraunhofer FDK AAC Codec Library"
authors = ["GremlinBox Maintainer <simon@sigre.xyz>"]
license = "FDK-AAC"
repository = "https://github.com/gocortexio/gremlinbox"
homepage = "https://github.com/gocortexio/gremlinbox"
documentation = "https://github.com/gocortexio/gremlinbox"
keywords = ["security", "testing", "licence", "spdx", "supply-chain"]
categories = ["development-tools::testing"]
include = ["src/**/*.rs", "LICENCE", "Cargo.toml"]
