[package]
name = "gremlinbox-jpl-image"
version = "2.0.1"
edition = "2021"
rust-version = "1.70"
description = "JPL Image Use Policy"
authors = ["GremlinBox Maintainer <simon@sigre.xyz>"]
license = "JPL-image"
repository = "https://github.com/gocortexio/gremlinbox"
homepage = "https://github.com/gocortexio/gremlinbox"
documentation = "https://github.com/gocortexio/gremlinbox"
keywords = ["security", "testing", "licence", "spdx", "supply-chain"]
categories = ["development-tools::testing"]
include = ["src/**/*.rs", "LICENCE", "Cargo.toml"]
