[package]
name = "gremlinbox-lgpl-2-1"
version = "2.0.1"
edition = "2021"
rust-version = "1.70"
description = "GNU Lesser General Public Licence version 2.1"
authors = ["GremlinBox Maintainer <simon@sigre.xyz>"]
license = "LGPL-2.1"
repository = "https://github.com/gocortexio/gremlinbox"
homepage = "https://github.com/gocortexio/gremlinbox"
documentation = "https://github.com/gocortexio/gremlinbox"
keywords = ["security", "testing", "licence", "spdx", "supply-chain"]
categories = ["development-tools::testing"]
include = ["src/**/*.rs", "LICENCE", "Cargo.toml"]
