[package]
name = "gremlinbox-linux-man-pages-copyleft"
version = "2.0.1"
edition = "2021"
rust-version = "1.70"
description = "Linux man-pages Copyleft"
authors = ["GremlinBox Maintainer <simon@sigre.xyz>"]
license = "Linux-man-pages-copyleft"
repository = "https://github.com/gocortexio/gremlinbox"
homepage = "https://github.com/gocortexio/gremlinbox"
documentation = "https://github.com/gocortexio/gremlinbox"
keywords = ["security", "testing", "licence", "spdx", "supply-chain"]
categories = ["development-tools::testing"]
include = ["src/**/*.rs", "LICENCE", "Cargo.toml"]
