[package]
name = "gremlinbox-ms-lpl"
version = "2.0.1"
edition = "2021"
rust-version = "1.70"
description = "Microsoft Limited Public Licence"
authors = ["GremlinBox Maintainer <simon@sigre.xyz>"]
license = "MS-LPL"
repository = "https://github.com/gocortexio/gremlinbox"
homepage = "https://github.com/gocortexio/gremlinbox"
documentation = "https://github.com/gocortexio/gremlinbox"
keywords = ["security", "testing", "licence", "spdx", "supply-chain"]
categories = ["development-tools::testing"]
include = ["src/**/*.rs", "LICENCE", "Cargo.toml"]
