[package]
name = "gremlinbox-openpbs-2-3"
version = "2.0.1"
edition = "2021"
rust-version = "1.70"
description = "OpenPBS v2.3 Software Licence"
authors = ["GremlinBox Maintainer <simon@sigre.xyz>"]
license = "OpenPBS-2.3"
repository = "https://github.com/gocortexio/gremlinbox"
homepage = "https://github.com/gocortexio/gremlinbox"
documentation = "https://github.com/gocortexio/gremlinbox"
keywords = ["security", "testing", "licence", "spdx", "supply-chain"]
categories = ["development-tools::testing"]
include = ["src/**/*.rs", "LICENCE", "Cargo.toml"]
