[package]
name = "gremlinbox-polyform-noncommercial-1-0-0"
version = "2.0.1"
edition = "2021"
rust-version = "1.70"
description = "PolyForm Noncommercial Licence v1.0.0"
authors = ["GremlinBox Maintainer <simon@sigre.xyz>"]
license = "PolyForm-Noncommercial-1.0.0"
repository = "https://github.com/gocortexio/gremlinbox"
homepage = "https://github.com/gocortexio/gremlinbox"
documentation = "https://github.com/gocortexio/gremlinbox"
keywords = ["security", "testing", "licence", "spdx", "supply-chain"]
categories = ["development-tools::testing"]
include = ["src/**/*.rs", "LICENCE", "Cargo.toml"]
