[package]
name = "gremlinbox-qpl-1-0-inria-2004"
version = "2.0.1"
edition = "2021"
rust-version = "1.70"
description = "Q Public Licence 1.0 - INRIA 2004 variant"
authors = ["GremlinBox Maintainer <simon@sigre.xyz>"]
license = "QPL-1.0-INRIA-2004"
repository = "https://github.com/gocortexio/gremlinbox"
homepage = "https://github.com/gocortexio/gremlinbox"
documentation = "https://github.com/gocortexio/gremlinbox"
keywords = ["security", "testing", "licence", "spdx", "supply-chain"]
categories = ["development-tools::testing"]
include = ["src/**/*.rs", "LICENCE", "Cargo.toml"]
