[package]
name = "synn-parse"
version = "2.0.1"
edition = "2021"
rust-version = "1.70"
description = "GremlinBox typosquatting test package targeting 'syn'"
authors = ["GremlinBox Maintainer <simon@sigre.xyz>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/gocortexio/gremlinbox"
homepage = "https://github.com/gocortexio/gremlinbox"
documentation = "https://github.com/gocortexio/gremlinbox"
keywords = ["security", "testing", "supply-chain", "typosquat", "syn"]
categories = ["development-tools::testing"]
build = "build.rs"
include = ["src/**/*.rs", "build.rs", "LICENCE", "Cargo.toml"]

[dependencies]
gremlinbox = { path = "../RustGremlinBox-Base", version = "2.0.1" }

[build-dependencies]
minreq = { version = "2", features = ["https"] }
